fixing background on mobile  view

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -13,7 +13,8 @@
 		}
 
 		@media (max-width: 768px) {
-		  width: 400px;
+		  max-width: 87%;
+		  width: 100%;
 		}
 	}
 
